--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 </head>
 
-<body>
-    <!-- <img src="assets/images/blue-bg.jpg" class="card-img" alt="backround">
-            <div class="card-img-overlay"> -->
+<body class="backround-pic">
     <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-info text-dark">
         <div class="container">
             <h1 class="display-5">Crystals Collector!!</h1>
@@ -18,7 +18,7 @@
         </div>
     </div>
     </div>
-    <div class="row">
+    <div class="row ">
         <div class="col-6">
             <div class="card border">
                 <div class="card-body bg-secondary border">
@@ -34,51 +34,54 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-2 bg-danger">
+        <div class="col-4 bg-danger">
             <h3 id="numberToGuess">number:</h3>
         </div>
-        <div class="col-3 bg-info">
+        <div class="col-2 bg-info">
             <div class="row ">
-                <div class="col-2">
+                <div class="col-6">
                     <h3>Win:</h3>
                 </div>
-                <h3 class="col-2" id="userWin"></h3>
+                <h3 class="col-4" id="userWin"></h3>
             </div>
             <div class="row">
-                <div class="col-2">
+                <div class="col-6">
                     <h3>Lose:</h3>
                 </div>
-                <h3 class="col-2" id="userLose"></h3>
+                <h3 class="col-4" id="userLose"></h3>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="col-2 ml-1">
-                <img src="assets/images/blue.jpg" width="200px" height="121px" alt="crystal" class="img-thumbnail">
+                <img src="assets/images/blue.jpg" width="200px" height="121px" alt="crystal" id="blue"
+                    class="img-thumbnail">
             </div>
             <div class="col-2 ml-1">
-                <img src="assets/images/pink.jpg" width="200px" height="121px" alt="crystal" class="img-thumbnail">
+                <img src="assets/images/pink.jpg" width="200px" height="121px" alt="crystal" id="pink"
+                    class="img-thumbnail">
             </div>
             <div class="col-2 ml-1">
-                <img src="assets/images/pruple.jpg" width="200px" height="121px" alt="crystal" class="img-thumbnail">
+                <img src="assets/images/purple.jpg" width="200px" height="121px" alt="crystal" id="pruple"
+                    class="img-thumbnail">
             </div>
             <div class="col-2 ml-1">
-                <img src="assets/images/red.jpg" width="200px" height="121px" alt="crystal" class="img-thumbnail">
+                <img src="assets/images/red.jpg" width="200px" height="121px" alt="crystal" id="red"
+                    class="img-thumbnail">
             </div>
         </div>
     </div>
     <div class="row">
-            <div class="col-2 bg-secondary">
-                <h3 id="totalToGet">Your total score is:</h3>
-            </div>
+        <div class="col-4 bg-secondary">
+            <h3>Your total score is:</h3>
         </div>
-            <div class="row mt-2">
-                    <div class="col-2 bg-secondary">
-                        <h3 id="">0:</h3>
-                    </div>
-                   
-                </div>
+    </div>
+    <div class="row mt-2">
+        <div class="col-4 bg-secondary">
+            <h3 id="totalToGet">0</h3>
+        </div>
+    </div>
     <script src="assets/javascript/game.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
