--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="backround-pic">
-    <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-info text-dark">
+    <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-secondary text-white">
         <div class="container">
             <h1 class="display-5">Crystals Collector!!</h1>
             <p class="lead">Counts with me!!!</p>
@@ -21,9 +21,9 @@
     <div class="row ">
         <div class="col-6">
             <div class="card border">
-                <div class="card-body bg-secondary border">
-                    <h5 class="card-title text-center bg-secondary">Game Instractions</h5>
-                    <ul class="card-text bg-secondary">
+                <div class="card-body bg-primary border">
+                    <h5 class="text-white text-center bg-primary">Game Instractions</h5>
+                    <ul class="text-white bg-primary">
                         <li>There will be four crystals displayed as buttons on the page.</li>
                         <li>The player will be shown a random number at the start of the game.</li>
                         <li> When the player clicks on a crystal, it will add a specific amount of points to the
@@ -34,18 +34,18 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4 bg-danger">
+        <div class="col-4 bg-primary text-white mx-2">
             <h3 id="numberToGuess">number:</h3>
         </div>
-        <div class="col-2 bg-info">
+        <div class="col-2 bg-primary text-white ">
             <div class="row ">
-                <div class="col-6">
+                <div class="col-6 text-white">
                     <h3>Win:</h3>
                 </div>
                 <h3 class="col-4" id="userWin"></h3>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 text-white">
                     <h3>Lose:</h3>
                 </div>
                 <h3 class="col-4" id="userLose"></h3>
@@ -55,7 +55,7 @@
     <div class="container">
         <div class="row">
             <div class="col-2 ml-1">
-                <img src="assets/images/blue.jpg" width="200px" height="121px" alt="crystal" id="blue"
+                <img src="assets/images/blue.jpg" width="200px" height="121px"  alt="crystal" id="blue"
                     class="img-thumbnail">
             </div>
             <div class="col-2 ml-1">
@@ -73,12 +73,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4 bg-secondary">
+        <div class="col-4 bg-primary text-white">
             <h3>Your total score is:</h3>
         </div>
     </div>
-    <div class="row mt-2">
-        <div class="col-4 bg-secondary">
+    <div class="row mt-2 text-white">
+        <div class="col-4 bg-primary">
             <h3 id="totalToGet">0</h3>
         </div>
     </div>
